@@ -89,7 +89,7 @@ a (logical) column number and a character one-to-one correspondence.
 even for combining characters (though not for fullwidth characters;
 see \fB\-Z\fR/\fB\-\-multicol\fR option for handling of fullwidth characters).
 Thus, this mode enables you to use combining characters with
-softwares which do not support combining characters.
+software which does not support combining characters.
 The default is \fBfalse\fR.
 .TP
 \fB\-K\fR, \fB\-\-metakey\fR=\fIvalue\fR
